--- a/webpack-learn/src/main.css
+++ b/webpack-learn/src/main.css
@@ -5,6 +5,6 @@ body{
     padding: 0 20px;
     max-width: 400px;
     color: #f40;
-    background-image: url(pic.jpg);
+    background-image: url('./pic.jpg');
     background-size: cover;
 }
